# MyLibrary_Hemis

./: .env.db  .env.db.example  .gitignore  DEPLOYMENT.md  backup.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  gobuster_output.txt  hunmay qoldim  nikto_output.txt.txt
backend/: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile
backend/.sqlx/: query-006bde643dd831795ec2e885ee0eff2d7f119b5e9695b70ffd73a4a99a99c064.json  query-0fe95638148a7890154cd5b1eae8061e3a1299931c118e19dea5b89575c60de4.json  query-143551233ff9075bbc89404224dcb1ca6af4171b568556b785063490cc697572.json  query-1b90fc8a0eb4c577b9006513f173be4fa641ef4e900802b3e19cd55a1683fdaf.json  query-20dbdf32544167d2bfbcc59d7b18dc470bf5f44ee386cd8ca842f692be928a9d.json  query-22b7603517f0d3c96e3c18c4fb4a9d3376845619706cb9ddbaf857046f4dadd9.json  query-2eba05657af5f351ce78ee5a1bf2b8624c6f2057f8330d722d21ba0d0bb78224.json  query-2f069ef19a5ed644e19903880848e69238c99f8a6da1feadabf817e5879948e4.json  query-2f9fd2efac6a5186cd71ade582fdb0c30394a6cb5d2c25006a11cff3c69d5483.json  query-3372b00a27d3ee59e5f06dae7d74406ce0909afe867faffaf3dbbfc2c747aa47.json  query-4124f0f4cb010069e2ee22c4d1654b23c82ac38538164e482b86af454e051822.json  query-4423d56563d2924aa47267301be4f882b95745a93b2381d5c00628f7d0f08714.json  query-4a9bc95d140a6424dbdc1f5bcd596ca1cd42e6db5d759f9d1cc5a6dd7683039a.json  query-60b7b5cc275dce1d29ed09e2be6376086fd9876cd154f2a2ec0f960ac706e358.json  query-6aa81f9ecef1c30592bb3bc1576270793429e9910f5a83185d542730140f790a.json  (+36 more)
backend/migrations/: 0009_book_requests.sql  001_init.sql  (+18 more)
(+134 files in other folders)
